# com-402-information-security-and-privacy

./: .gitignore  LICENSE  README.md
exercises/ex10/handout/: hw10.md  solution.ipynb  solution.py
exercises/ex11/hw11_imdb_anonymization/: helpers.py  hw11.md  verify.py
exercises/ex11/hw11_imdb_anonymization_solution/: dp.py  dp_solution.py  e1-2.py  helpers.py  hw11.md  verify.py
exercises/ex12/handout/: client.ipynb  hw_ml.md
exercises/ex12/solution/: hw_ml_1.py
exercises/ex2/: crypto_demo.ipynb
exercises/ex3/: handout.md  server.py  solution.md
exercises/ex4/demo_password_crack/: ex4.py  flag.txt  password_cracking.ipynb
exercises/ex4/demo_password_crack_sol/: ex4_sol.py  password_cracking_sol.ipynb
exercises/ex5/demo/: Race.java  build.sh  race.c  spatial.c  temporal.c  union.c
exercises/ex5/demo/rust/: Cargo.toml
exercises/ex5/demo/rust/src/: race.rs  spatial.rs  temporal.rs  union.rs
exercises/ex6/demo/binex/: Dockerfile  Makefile  README.md  c0  c0.c  c1  c1.c  c3  c3.c  exploit.py
exercises/ex6/demo/web/: exams.php  run-docker.sh
exercises/ex6/demo_solutions/: README.md
exercises/ex6/demo_solutions/binex/: README.md  build-docker.sh  c0  c0.c  c1  c1.c  c2  c2.c  exploit.py  run-docker.sh  solution.py
exercises/ex6/demo_solutions/web/: Dockerfile  Dockerfile_fixed  build-docker.sh  exams_fixed.php  index.php  index_fixed.php  ping.php  ping_fixed.php  users.php  users_fixed.php
exercises/ex7/exercise/: lab.md
exercises/ex8/: lab.md
exercises/ex8/challenges/: flags.md
exercises/ex9/exercises/ex1/: Dockerfile  client.py  (+2 more)
(+16 files in other folders)
